# adex

./: TODO.md
.github/workflows/: codex-orchestrator-ci.yml
codex-cli/scripts/: build_npm_package.py
codex-rs/app-server-protocol/src/: protocol.rs
codex-rs/app-server/src/: codex_message_processor.rs
codex/agents/: Cargo.toml  README.md
codex/agents/code/: Cargo.toml
codex/agents/code/src/: lib.rs
codex/agents/debug/: Cargo.toml
codex/agents/debug/src/: lib.rs
codex/agents/reviewer/: Cargo.toml
codex/agents/reviewer/src/: lib.rs
codex/agents/spec/: Cargo.toml
codex/agents/spec/src/: lib.rs
codex/agents/src/: lib.rs
codex/agents/test-generator/: Cargo.toml
codex/agents/test-generator/src/: lib.rs
codex/backend/orchestrator/: Cargo.toml  DEPLOYMENT_README.md  Dockerfile  README.md  deploy.sh
codex/backend/orchestrator/k8s/: alert-rules.yaml  deployment.yaml  grafana-deployment.yaml  prometheus-config.yaml  prometheus-deployment.yaml
codex/backend/orchestrator/src/: lib.rs  main.rs
codex/integrations/github/: Cargo.toml  README.md
codex/integrations/github/src/: lib.rs
codex/scripts/: test-orchestrator.js
codex/web/: package.json
codex/web/public/: index.html
codex/web/src/: App.css  App.js
codex/web/src/components/: DiffViewer.css  DiffViewer.js  ErrorBoundary.css  ErrorBoundary.js  PromptComposer.css  PromptComposer.js  SessionRecording.css  SessionRecording.js  StreamingDiffViewer.css  StreamingDiffViewer.js
codex/web/src/contexts/: SessionRecordingContext.js
samples/nodejs-sample/: index.js  package.json
samples/python-sample/: app.py
scripts/: stage_npm_packages.py
