[package]
name = "codex-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.2", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
codex-agents = { path = "../../../codex/agents" }

# Web framework
axum = { version = "0.7", features = ["json", "macros", "extract"] }
tower = { version = "0.4", features = ["util", "limit", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full", "timeout"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.20"
opentelemetry = { version = "0.18", features = ["rt-tokio"] }

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = { version = "0.10", features = ["http-listener"] }

[dev-dependencies]
tokio-test = "0.4"
